# libgenmics

./: pyproject.toml  tox.ini
libgenmics/: client.py  comicinfo.py  comicvine.py  zipping.py
tests/: conftest.py  test_client.py  test_comicinfo.py  test_comicvine.py  test_zipping.py
tests/cassettes/: test_client_download.yaml  test_client_search_absolute_watchmen.yaml  test_client_search_nothing.yaml  test_client_search_watchmen.yaml  test_comicvine_client_issue[4000-136972].yaml  test_comicvine_client_issue[4000-979622].yaml  test_comicvine_client_issue[44193].yaml  test_comicvine_client_volume.yaml
tests/cassettes/test_comicvine_client_issue[https:/comicvine.gamespot.com/daredevil-379-flying-blind-part-4/4000-136972/: ].yaml
tests/data/: dummy.cbz
